force-app/main/default/objects/Portal_Page_Section_Setting__mdt/Portal_Page_Section_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Portal Page Section Setting</label>
    <pluralLabel>Portal Page Section Settings</pluralLabel>
</CustomObject>