force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Active_Record_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Active_Record_Field_Map__c</fullName>
    <description>If we want to display a record on the front end, this field contains a json string of all of the fields and values we need to populate in order to show the record.</description>
    <inlineHelpText>If we want to display a record on the front end, this field contains a json string of all of the fields and values we need to populate in order to show the record.</inlineHelpText>
    <label>Active Record Field Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>