force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Controlling_Parent_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Parent_Field_API_Name__c</fullName>
    <description>The field we wish to use to restrict the query. (i.e can be the contact lookup field if we only want to show a single constituent&apos;s information on the My Information portal page)</description>
    <inlineHelpText>The field we wish to use to restrict the query. (i.e can be the contact lookup field if we only want to show a single constituent&apos;s information on the My Information portal page)</inlineHelpText>
    <label>Controlling Parent Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>