force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Controlling_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Parent_Object__c</fullName>
    <label>Controlling Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>