force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Create_Staging_Record_Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Create_Staging_Record_Condition_Field__c</fullName>
    <description>Field that controls whether or not we create a staging record if the record is edited.</description>
    <inlineHelpText>Field that controls whether or not we create a staging record if the record is edited.</inlineHelpText>
    <label>Create Staging Record Condition Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>