force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Create_Staging_Record_Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>Create_Staging_Record_Condition_Operator__c</fullName>
    <description>Operator used to evaluate the field that controls whether or not we create a staging record if the record is edited.</description>
    <inlineHelpText>Operator used to evaluate the field that controls whether or not we create a staging record if the record is edited.</inlineHelpText>
    <label>Create Staging Record Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>!=</fullName>
                <default>true</default>
                <label>!=</label>
            </value>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>NOT LIKE</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>BLANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>