force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Create_Staging_Record_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Create_Staging_Record_Condition_Value__c</fullName>
    <description>Value used to compare against the field that controls whether or not we create a staging record if the record is edited.</description>
    <inlineHelpText>Value used to compare against the field that controls whether or not we create a staging record if the record is edited.</inlineHelpText>
    <label>Create Staging Record Condition Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>