force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Duplicate_Field_Logic__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Field_Logic__c</fullName>
    <description>Boolean logic string composed of fields aliased with numbers and the standard boolean operators that controls how we evaluate duplicate records.</description>
    <inlineHelpText>Boolean logic string composed of fields aliased with numbers and the standard boolean operators that controls how we evaluate duplicate records.</inlineHelpText>
    <label>Duplicate Field Logic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>