force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/External_Id_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field_API_Name__c</fullName>
    <description>Field api name of the external id field we wish to use to identify the records.</description>
    <inlineHelpText>Field api name of the external id field we wish to use to identify the records.</inlineHelpText>
    <label>External Id Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>