force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Front_End_Section_Id__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Section_Id__c</fullName>
    <description>The unique id for this section when we want to display it on the front end portal pages.</description>
    <inlineHelpText>The unique id for this section when we want to display it on the front end portal pages.</inlineHelpText>
    <label>Front End Section Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>