force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Front_End_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Section_Label__c</fullName>
    <description>The label that will show as a subheader for this section on the front end portal page.</description>
    <inlineHelpText>The label that will show as a subheader for this section on the front end portal page.</inlineHelpText>
    <label>Front End Section Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>