force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Group_By_Clause__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Clause__c</fullName>
    <description>The group by clause that we will use when creating the query string.</description>
    <inlineHelpText>The group by clause that we will use when creating the query string.</inlineHelpText>
    <label>Group By Clause</label>
    <length>80</length>
    <type>Text</type>
</CustomField>