force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Has_Duplicate_Logic__c.field-meta.xml
<CustomField>
    <fullName>Has_Duplicate_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us if we have logic to determine if a record is a duplicate of another record.</description>
    <inlineHelpText>Tells us if we have logic to determine if a record is a duplicate of another record.</inlineHelpText>
    <label>Has Duplicate Logic</label>
    <type>Checkbox</type>
</CustomField>