force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us that this section is trying to query related records on the sobject</description>
    <inlineHelpText>Tells us that this section is trying to query related records on the sobject</inlineHelpText>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>