force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Create_Staging_Record_Upon_Creation__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Staging_Record_Upon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us to create a staging record if this is a newly created record on the front end.</description>
    <inlineHelpText>Tells us to create a staging record if this is a newly created record on the front end.</inlineHelpText>
    <label>Is Create Staging Record Upon Creation</label>
    <type>Checkbox</type>
</CustomField>