force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Create_Staging_Record_Upon_Edit__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Staging_Record_Upon_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us to create a staging record if  this record was edited on the front end.</description>
    <inlineHelpText>Tells us to create a staging record if this record was edited on the front end.</inlineHelpText>
    <label>Is Create Staging Record Upon Edit</label>
    <type>Checkbox</type>
</CustomField>