force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Create_Staging_Record_Using_Fields__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Staging_Record_Using_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us to create a staging record if this record meets the criteria defined the Portal_Section_Field_Setting__mdt records.</description>
    <inlineHelpText>Tells us to create a staging record if this record meets the criteria defined the Portal_Section_Field_Setting__mdt records.</inlineHelpText>
    <label>Is Create Staging Record Using Fields</label>
    <type>Checkbox</type>
</CustomField>