force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us that all records under this section cannot be edited on the front end.</description>
    <inlineHelpText>Tells us that all records under this section cannot be edited on the front end.</inlineHelpText>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>