force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Display_Section__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that controls the front end display of the section. If it is checked, the section will display on the front end. If it is unchecked, the section will not display on the front end.</description>
    <inlineHelpText>Field that controls the front end display of the section. If it is checked, the section will display on the front end. If it is unchecked, the section will not display on the front end.</inlineHelpText>
    <label>Is Display Section</label>
    <type>Checkbox</type>
</CustomField>