force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Display_Toggle_Per_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_Toggle_Per_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If these records are associated with a directory setting and this field is checked, then the input field that allows the user to change their directory settings will show next to the record.</description>
    <inlineHelpText>If these records are associated with a directory setting and this field is checked, then the input field that allows the user to change their directory settings will show next to the record.</inlineHelpText>
    <label>Is Display Toggle Per Record</label>
    <type>Checkbox</type>
</CustomField>