force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Is_Hard_Delete_Records__c.field-meta.xml
<CustomField>
    <fullName>Is_Hard_Delete_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells us to delete the records if the user deletes them on the front end, instead of hiding them for historical data.</description>
    <inlineHelpText>Tells us to delete the records if the user deletes them on the front end, instead of hiding them for historical data.</inlineHelpText>
    <label>Is Hard Delete Records</label>
    <type>Checkbox</type>
</CustomField>