force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Listing_Configurations__c.field-meta.xml
<CustomField>
    <fullName>Listing_Configurations__c</fullName>
    <defaultValue>&quot;{\&quot;scope\&quot;: \&quot;\&quot;, \&quot;relevance\&quot;: \&quot;\&quot;, \&quot;recordType\&quot;:\&quot;\&quot;, \&quot;portalZone\&quot;: \&quot;\&quot;, \&quot;sharing\&quot;: \&quot;\&quot;, \&quot;maxItems\&quot;: \&quot;\&quot;, \&quot;itemsPerPage\&quot;: \&quot;\&quot;}&quot;</defaultValue>
    <label>Listing Configurations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>