force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Max_Number_of_Query_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Query_Records__c</fullName>
    <description>Max number of records to limit the query to</description>
    <inlineHelpText>Max number of records to limit the query to</inlineHelpText>
    <label>Max Number of Query Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>