force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Max_Staging_Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>Max_Staging_Object_Fields__c</fullName>
    <description>If the staging record has multiple fields for the same type of record, this record tells us how many records can fit on one staging record.</description>
    <inlineHelpText>If the staging record has multiple fields for the same type of record, this record tells us how many records can fit on one staging record.</inlineHelpText>
    <label>Max Staging Object Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>