force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Order_By_Clause__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Clause__c</fullName>
    <description>The order by clause for the query</description>
    <inlineHelpText>The order by clause for the query</inlineHelpText>
    <label>Order By Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>