force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Original_Record_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Field_API_Name__c</fullName>
    <label>Original Record Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>