force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Page_Main_Section__c.field-meta.xml
<CustomField>
    <fullName>Page_Main_Section__c</fullName>
    <description>The main header that we are displaying the records under on the portal page</description>
    <inlineHelpText>The main header that we are displaying the records under on the portal page</inlineHelpText>
    <label>Page Main Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal_Information</fullName>
            </value>
            <value>
                <fullName>Phones</fullName>
            </value>
            <value>
                <fullName>Emails</fullName>
            </value>
            <value>
                <fullName>Addresses</fullName>
            </value>
            <value>
                <fullName>Degrees</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Social_Media</fullName>
            </value>
            <value>
                <fullName>Privacy_Settings</fullName>
            </value>
            <value>
                <fullName>Designations</fullName>
            </value>
            <value>
                <fullName>Giving History Table</fullName>
            </value>
            <value>
                <fullName>Pledge table</fullName>
            </value>
            <value>
                <fullName>Matching Gift Table</fullName>
            </value>
            <value>
                <fullName>Recurring Gift Table</fullName>
            </value>
            <value>
                <fullName>Yearly Giving Table</fullName>
            </value>
            <value>
                <fullName>Year End Tax Letter</fullName>
            </value>
            <value>
                <fullName>Yearly Giving Summary Table</fullName>
            </value>
            <value>
                <fullName>Events Tabs</fullName>
            </value>
            <value>
                <fullName>Content Submission Form</fullName>
            </value>
            <value>
                <fullName>Submitted Content</fullName>
            </value>
            <value>
                <fullName>Company_Information</fullName>
            </value>
            <value>
                <fullName>Giving History Gift Receipt</fullName>
            </value>
            <value>
                <fullName>Pie chart</fullName>
            </value>
            <value>
                <fullName>Giving Societies List</fullName>
            </value>
            <value>
                <fullName>Giving Societies Banner</fullName>
            </value>
            <value>
                <fullName>Donor Story</fullName>
            </value>
            <value>
                <fullName>Detail Page</fullName>
            </value>
            <value>
                <fullName>Society Membership Table</fullName>
            </value>
            <value>
                <fullName>Zone Search</fullName>
            </value>
            <value>
                <fullName>Zone Leadership</fullName>
            </value>
            <value>
                <fullName>Featured Zone Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>