force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <description>The portal page name that we are displaying the records on</description>
    <inlineHelpText>The portal page name that we are displaying the records on</inlineHelpText>
    <label>Page Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bio Information</fullName>
                <default>true</default>
                <label>Bio Information</label>
            </value>
            <value>
                <fullName>In Progress Interim</fullName>
            </value>
            <value>
                <fullName>Interim Company</fullName>
            </value>
            <value>
                <fullName>My Information</fullName>
            </value>
            <value>
                <fullName>Online Giving</fullName>
            </value>
            <value>
                <fullName>My Information Self Report</fullName>
            </value>
            <value>
                <fullName>Giving Societies</fullName>
            </value>
            <value>
                <fullName>Giving History</fullName>
            </value>
            <value>
                <fullName>Year end tax letter</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Event Submission Form</fullName>
            </value>
            <value>
                <fullName>Submitted Content</fullName>
            </value>
            <value>
                <fullName>New User Login</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Gift Receipt</fullName>
            </value>
            <value>
                <fullName>Yearly Tax letter Table</fullName>
            </value>
            <value>
                <fullName>Giving Societies Detail</fullName>
            </value>
            <value>
                <fullName>Zone Home Page</fullName>
            </value>
            <value>
                <fullName>Zone Bio Detail</fullName>
            </value>
            <value>
                <fullName>Zone Leadership</fullName>
            </value>
            <value>
                <fullName>Zone Memberships</fullName>
            </value>
            <value>
                <fullName>Zone Search</fullName>
            </value>
            <value>
                <fullName>Job Posting</fullName>
            </value>
            <value>
                <fullName>Job Management</fullName>
            </value>
            <value>
                <fullName>Job Listing</fullName>
            </value>
            <value>
                <fullName>Job Application</fullName>
            </value>
            <value>
                <fullName>My Applications</fullName>
            </value>
            <value>
                <fullName>Job Applicants</fullName>
            </value>
            <value>
                <fullName>Job Search</fullName>
            </value>
            <value>
                <fullName>Membership Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>