force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Page_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Page_Sub_Section__c</fullName>
    <description>The sub header nested under the main section that we are displaying the records under on the portal page</description>
    <inlineHelpText>The sub header nested under the main section that we are displaying the records under on the portal page</inlineHelpText>
    <label>Page Sub Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
                <default>true</default>
                <label>Name</label>
            </value>
            <value>
                <fullName>Also_Known_As</fullName>
            </value>
            <value>
                <fullName>Directory_Display_Name</fullName>
            </value>
            <value>
                <fullName>Additional_Details</fullName>
            </value>
            <value>
                <fullName>School_Degree_Information</fullName>
            </value>
            <value>
                <fullName>Non_School_Degree_Information</fullName>
                <label>Non-School_Degree_Information</label>
            </value>
            <value>
                <fullName>Directory_Setting</fullName>
            </value>
            <value>
                <fullName>Directory_Opt_Out</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>All Events</fullName>
            </value>
            <value>
                <fullName>My Events</fullName>
            </value>
            <value>
                <fullName>Events Near Me</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Contact Info</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Annual Society Memberships</fullName>
            </value>
            <value>
                <fullName>Lifetime Society Memberships</fullName>
            </value>
            <value>
                <fullName>Inactive Society Memberships</fullName>
            </value>
            <value>
                <fullName>Active Memberships</fullName>
            </value>
            <value>
                <fullName>One Time Membership</fullName>
            </value>
            <value>
                <fullName>Auto Recurring Membership</fullName>
            </value>
            <value>
                <fullName>Installment Based Membership</fullName>
            </value>
            <value>
                <fullName>Inactive Memberships</fullName>
            </value>
            <value>
                <fullName>ConstantContact</fullName>
            </value>
            <value>
                <fullName>Mailgun</fullName>
            </value>
            <value>
                <fullName>Volunteer Jobs</fullName>
            </value>
            <value>
                <fullName>Constituent Skills</fullName>
            </value>
            <value>
                <fullName>Completed Jobs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>