force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <description>The developer name of the record type that we want to populate the record with</description>
    <inlineHelpText>The developer name of the record type that we want to populate the record with</inlineHelpText>
    <label>Record Type Developer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>