force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Relationship_Wrapper_Id__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Wrapper_Id__c</fullName>
    <label>Relationship Wrapper Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>