force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Section_Description__c.field-meta.xml
<CustomField>
    <fullName>Section_Description__c</fullName>
    <label>Section Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>