force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>The sobject api name of the records we are trying to query and display on the front end.</description>
    <inlineHelpText>The sobject api name of the records we are trying to query and display on the front end.</inlineHelpText>
    <label>SObject API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>