force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/SObject_Relationship_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Relationship_API_Name__c</fullName>
    <description>The relationship api name if we want to query for related records (used in conjunction with the Is_Child__c field)</description>
    <inlineHelpText>The relationship api name if we want to query for related records (used in conjunction with the Is_Child__c field)</inlineHelpText>
    <label>SObject Relationship API Name</label>
    <length>65</length>
    <type>Text</type>
</CustomField>