force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Staging_Record_Controlling_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record_Controlling_Parent_Field__c</fullName>
    <label>Staging Record Controlling Parent Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>