force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Staging_Record_Controlling_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record_Controlling_Parent_Object__c</fullName>
    <label>Staging Record Controlling Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>