force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Staging_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record_Type_Developer_Name__c</fullName>
    <label>Staging Record Type Developer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>