force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Staging_Record_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record_Where_Clause__c</fullName>
    <description>Where clause used to filter the staging records displayed on the front end.</description>
    <inlineHelpText>Where clause used to filter the staging records displayed on the front end.</inlineHelpText>
    <label>Staging Record Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>