force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Staging_sObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_sObject_API_Name__c</fullName>
    <description>The sobject api name of the staging record that we want to store the new data in</description>
    <inlineHelpText>The sobject api name of the staging record that we want to store the new data in</inlineHelpText>
    <label>Staging sObject API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>