force-app/main/default/objects/Portal_Page_Section_Setting__mdt/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <description>Where clause used to filter the records that we are trying to display on this section</description>
    <inlineHelpText>Where clause used to filter the records that we are trying to display on this section</inlineHelpText>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>