force-app/main/default/objects/Portal_Page_Section_Setting__mdt/listViews/ISUF_New_User_Portal_Sections.listView-meta.xml
<ListView>
    <fullName>ISUF_New_User_Portal_Sections</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Page_Name__c</columns>
    <columns>Page_Main_Section__c</columns>
    <columns>Page_Sub_Section__c</columns>
    <columns>Is_Create_Staging_Record_Upon_Creation__c</columns>
    <columns>Is_Create_Staging_Record_Upon_Edit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Display_Section__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>New_user</value>
    </filters>
    <label>ISUF New User Portal Sections</label>
    <language>en_US</language>
</ListView>